--- a/La Ñata/La Ñata.csproj
+++ b/La Ñata/La Ñata.csproj
@@ -150,6 +150,7 @@
     <Content Include="Scripts\notification.js" />
     <Content Include="Scripts\orders.js" />
     <Content Include="Scripts\orders_create.js" />
+    <Content Include="Scripts\product_edit.js" />
     <Content Include="Scripts\productOrder.js" />
     <Content Include="Scripts\products.js" />
     <Content Include="Web.config" />
@@ -164,13 +165,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Filter\Security.cs" />
     <Compile Include="Models\EFModel.cs" />
     <Compile Include="Models\Expense.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductOrder.cs" />
     <Compile Include="Models\Rol.cs" />
-    <Compile Include="Filter\Security.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -213,7 +214,6 @@
     <Content Include="Views\Expenses\Edit.cshtml" />
     <Content Include="Views\Expenses\Index.cshtml" />
     <Content Include="Views\Orders\Create.cshtml" />
-    <Content Include="Views\Orders\Delete.cshtml" />
     <Content Include="Views\Orders\Details.cshtml" />
     <Content Include="Views\Orders\Edit.cshtml" />
     <Content Include="Views\Orders\Index.cshtml" />
