--- a/La Ñata/La Ñata.csproj
+++ b/La Ñata/La Ñata.csproj
@@ -122,7 +122,6 @@
     <Content Include="Content\notification.css" />
     <Content Include="Content\number_input.css" />
     <Content Include="Content\orders.css" />
-    <Content Include="Content\products.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\table.css" />
     <Content Include="Global.asax" />
@@ -134,6 +133,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.6.3.intellisense.js" />
     <Content Include="Scripts\daterangepicker.js" />
+    <Content Include="Scripts\expenses.js" />
     <Content Include="Scripts\jquery-3.6.3.js" />
     <Content Include="Scripts\jquery-3.6.3.min.js" />
     <Content Include="Scripts\jquery-3.6.3.slim.js" />
@@ -209,8 +209,6 @@
     <Content Include="Views\Products\Create.cshtml" />
     <Content Include="Views\Products\Index.cshtml" />
     <Content Include="Views\Expenses\Create.cshtml" />
-    <Content Include="Views\Expenses\Delete.cshtml" />
-    <Content Include="Views\Expenses\Details.cshtml" />
     <Content Include="Views\Expenses\Edit.cshtml" />
     <Content Include="Views\Expenses\Index.cshtml" />
     <Content Include="Views\Orders\Create.cshtml" />
