Deleted Rotativa to generate pdf files

--- a/La Ñata/Web.config
+++ b/La Ñata/Web.config
@@ -17,7 +17,7 @@
   <system.web>
 	<sessionState mode="InProc" cookieless="false" timeout="120" />
 	<globalization uiCulture="es" culture="es-MX" />
-	<customErrors mode="Off"/>
+	<customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
   </system.web>
@@ -48,7 +48,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="EFModel" connectionString="data source=.\SQLEXPRESS;initial catalog=LaNata;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AzureDB" connectionString="data source=.\SQLEXPRESS;initial catalog=LaNata;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
