--- a/La Ñata/La Ñata.csproj
+++ b/La Ñata/La Ñata.csproj
@@ -120,6 +120,8 @@
     <Content Include="Content\daterangepicker.css" />
     <Content Include="Content\Images\favicon.png" />
     <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\qr_ig.png" />
+    <Content Include="Content\Images\qr_wpp.png" />
     <Content Include="Content\login.css" />
     <Content Include="Content\navbar.css" />
     <Content Include="Content\notification.css" />
@@ -136,6 +138,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\lañata - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.6.3.intellisense.js" />
+    <Content Include="Scripts\daterangepicker-with-events.js" />
     <Content Include="Scripts\daterangepicker.js" />
     <Content Include="Scripts\expenses.js" />
     <Content Include="Scripts\jquery-3.6.3.js" />
