--- a/La Ñata/packages.config
+++ b/La Ñata/packages.config
@@ -11,4 +11,5 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net481" />
 </packages>
